--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
+    "jquery": "^3.4.1",
+    "normalize.css": "^8.0.1",
+    "popper.js": "^1.16.1",
+    "serve": "^11.3.0",
     "vue": "^2.6.11",
+    "vue-country-flag": "^1.3.1",
+    "vue-multiselect": "^2.1.6",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
   },
